Added Navbar Stylings

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
-        <h1>This is my super awesome header</h1>
+        <header>
+            <nav class="navbar">
+                <h1 class="logo">Real Estate Company LLC</h1>
+                <ul>
+                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">What We Do</a></li>
+                    <li><a href="">Our Team</a></li>
+                    <li><a href="">Investment Company</a></li>
+                </ul>
+            </nav>
+        </header>
     </body>
 </html>
